# bfsai

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.playwright-cli/: page-2026-03-11T08-20-47-730Z.yml  page-2026-03-11T08-28-09-338Z.yml
app/: __init__.py  alignment.py  bill_splitter.py  classifier.py  client_lookup.py  config.py  documents.py  extractor.py  fields.py  ingestion.py  intake.py  learning.py  main.py  payee_lookup.py  pdfium_guard.py  pipeline.py  repository.py  schemas.py  service_manager.py  strategy.py  training.py  utils.py  verifier.py  viewer.py  worker.py
app/static/: bill_splitter.js  review.js  style.css  unmatched.js
app/templates/: base.html  bill_splitter.html  dashboard.html  document.html  services.html  training.html  unmatched.html
bfsai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: settings.example.yaml  settings.yaml
docs/: ap-implementation-plan.md  ap-workflow-proposal.md
scripts/: manage_services.py  split_bill_batch.py  switch_strategy.py
server/scans/bill_splitter_batches/: batch_74vcqdvnujedtfq3.json  batch_7xaq6uoqcrdz3enc.json  batch_a6h26wulzzg3xctl.json  batch_bvfayqie2zehfe5r.json  batch_bvp25drjsrfmlgjn.json  (+6 more)
storage/runtime/: active_strategy.json  clients_minimal_cache.json
tests/: test_alignment.py  test_bill_splitter.py  test_classifier.py  test_client_lookup.py  test_documents.py  test_extractor.py  test_ingestion.py  test_intake.py  test_learning.py  test_payee_lookup.py  test_training.py  test_utils.py  test_verifier.py  test_viewer.py  test_worker.py
(+60 files in other folders)
